--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+/* WWDCScholars Github Pages CSS */
+/* Initial Source: WWDC-Scholars-Web-2015. Modified specifically for WWDCScholars Github Pages  */
+/* View Github Page: https://wwdcscholars.github.io */
+/* GitHub: https://github.com/wwdcscholars/wwdcscholars.github.io */
+
 body{
 	font-family:'San Francisco';
 	font-weight: 400;
